# solana_stacking_v2

./: Anchor.toml  README.md  package.json
migrations/: deploy.ts
programs/chicks_staking_locked/: Cargo.toml
programs/chicks_staking_locked/src/: lib.rs
scripts/: solana.ts  tool.ts
scripts/idl/: chicks_staking_locked.ts
tests/: chicks_staking_locked.ts  utils.ts
tests/keys/: keyinfo.md  solchick.json
